--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Damien Couteillou",
-            "email": "damien@ayctor.com"
+            "name": "Ayctor",
+            "email": "devs@ayctor.com"
         }
     ],
     "config": {
@@ -16,17 +16,17 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php" : "^7.0|^8.0",
-        "cron/cron": "^1.4.1",
-        "filp/whoops": "^2.4.1",
-        "illuminate/config": "^5.8.27",
-        "illuminate/view": "^5.8.27",
-        "mikehaertl/phpwkhtmltopdf": "^2.4.0",
+        "php" : "^8.1",
+        "cron/cron": "^1.8.0",
+        "filp/whoops": "^2.15.0",
+        "illuminate/config": "^10.11.0",
+        "illuminate/view": "^10.11.0",
+        "mikehaertl/phpwkhtmltopdf": "^2.5.0",
         "mmucklo/inflect": "^0.3.0",
-        "phpoffice/phpspreadsheet": "^1.8.1",
-        "symfony/var-dumper": "^4.3.2",
-        "tgmpa/tgm-plugin-activation": "dev-develop",
-        "vlucas/phpdotenv": "^3.4.0"
+        "phpoffice/phpspreadsheet": "^1.28.0",
+        "symfony/var-dumper": "^6.2.0",
+        "tgmpa/tgm-plugin-activation": "^2.6.0",
+        "vlucas/phpdotenv": "^5.5.0"
     },
     "autoload": {
         "psr-0": {
